# CppUnitTestingWinter2018

./: CMakeLists.txt  README.md  catch.h  main.cpp
Fixtures/DatabaseFixtures/: DatabaseFixture.cpp  DatabaseFixture.h
IntegrationTests/: BDDTest.cpp
Models/: MyClass.cpp  MyClass.h
TestingModules/: CheckUse.cpp  CommandLineTests.cpp  ExceptionsAsserting.cpp  FalseAssertions.cpp  FirstTest.cpp  SpecialTags.cpp  StringConvertion.cpp  TagsUse.cpp  TestNames.cpp  TestSections.cpp  multipleAssertionInTest.cpp
Utilities/StringConversions/: MyClassConvertion.cpp
